# fastsim

./: .gitignore  Cargo.toml  README.md  build_and_test.sh  pyproject.toml
.github/workflows/: build_and_test.yaml
.subtrees/ninterp/: Cargo.toml  README.md
.subtrees/ninterp/src/: error.rs  lib.rs  n.rs  one.rs  two.rs
benches/: benchmark.rs
cal_and_val/f3-vehicles/: 2010 Mazda 3 i-Stop.yaml  2012 Ford Focus.yaml  2012 Ford Fusion.yaml  2016 AUDI A3 4cyl 2WD.yaml  2016 BMW 328d 4cyl 2WD.yaml  2016 CHEVROLET Malibu 4cyl 2WD.yaml  2016 CHEVROLET Spark EV.yaml  2016 FORD C-MAX HEV.yaml  2016 FORD Escape 4cyl 2WD.yaml  2016 FORD Explorer 4cyl 2WD.yaml  2016 HYUNDAI Elantra 4cyl 2WD.yaml  2016 Hyundai Tucson Fuel Cell.yaml  2016 KIA Optima Hybrid.yaml  2016 Leaf 24 kWh.yaml  2016 MITSUBISHI i-MiEV.yaml  2016 Nissan Leaf 30 kWh.yaml  2016 TESLA Model S60 2WD.yaml  2016 TOYOTA Camry 4cyl 2WD.yaml  2016 TOYOTA Corolla 4cyl 2WD.yaml  2016 TOYOTA Highlander Hybrid.yaml  2016 Toyota Prius Two FWD.yaml  2017 CHEVROLET Bolt.yaml  2017 Maruti Dzire VDI.yaml  2017 Toyota Highlander 3.5 L.yaml  2020 Chevrolet Colorado 2WD Diesel.yaml  2020 Hero Splendor+ 100cc.yaml  2020 VW Golf 1.5TSI.yaml  2020 VW Golf 2.0TDI.yaml  2021 BMW iX xDrive40.yaml  2021 Cupra Born.yaml  2021 Fiat Panda Mild Hybrid.yaml  2021 Honda N-Box G.yaml  2021 Peugot 3008.yaml  2022 Ford F-150 Lightning 4WD.yaml  2022 MINI Cooper SE Hardtop 2 door.yaml  2022 Renault Megane E-Tech.yaml  2022 Renault Zoe ZE50 R135.yaml  2022 Tesla Model 3 RWD.yaml  2022 Tesla Model Y RWD.yaml  2022 Toyota RAV4 Hybrid LE.yaml  (+22 more)
cal_and_val/thermal/: cal_bev.py  cal_hev.py  updated_sonata_hybrid.py  val_bev.py  val_hev.py
fastsim-cli/: Cargo.toml
fastsim-core/: Cargo.toml  init_derive.rs  test.yaml  test2.yaml
fastsim-core/src/: air_properties.rs  drive_cycle.rs  gas_properties.rs  imports.rs  lib.rs  macros.rs  prelude.rs  pyo3.rs  resources.rs  si.rs  simdrive.rs  traits.rs  uc.rs
fastsim-py/: Cargo.toml
fastsim-py/src/: lib.rs
python/fastsim/: __init__.py  fastsim.pyi  pymoo_api.py
src/: three.rs
validation/: f2-validation.py
validation/f3-vehicles/: 2010 Mazda 3 i-Stop.yaml  2012 Ford Focus.yaml  2016 AUDI A3 4cyl 2WD.yaml  2016 CHEVROLET Malibu 4cyl 2WD.yaml  2016 FORD C-MAX HEV.yaml  2016 HYUNDAI Elantra 4cyl 2WD.yaml  2016 Hyundai Tucson Fuel Cell.yaml  2016 KIA Optima Hybrid.yaml  2016 Leaf 24 kWh.yaml  2016 TOYOTA Highlander Hybrid.yaml  2016 Toyota Prius Two FWD.yaml  2017 CHEVROLET Bolt.yaml  2017 Maruti Dzire VDI.yaml  2020 Chevrolet Colorado 2WD Diesel.yaml  2020 Hero Splendor+ 100cc.yaml  2020 VW Golf 2.0TDI.yaml  2021 BMW iX xDrive40.yaml  2021 Fiat Panda Mild Hybrid.yaml  2021 Honda N-Box G.yaml  2022 Ford F-150 Lightning 4WD.yaml  2022 Renault Megane E-Tech.yaml  (+14 more)
(+58 files in other folders)
