[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "fastsim"
version = "3.0.0"
authors = [{ name = "NREL/MTES/CIMS/MBAP Group", email = "fastsim@nrel.gov" }]
description = "Tool for modeling vehicle powertrains"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pandas~=1.5",
    "polars~=1.4",
    "matplotlib~=3.3",
    "numpy~=1.18",
    "seaborn~=0.10.0",
    "typing_extensions~=4.12",
    "PyYAML==6.0.2",
    "msgpack==1.1.0",
]

[project.urls]
Homepage = "https://www.nrel.gov/transportation/fastsim.html"

[project.optional-dependencies]
dev = [
    "black~=25.1",
    "pytest~=8.3",
    "maturin~=1.8",
    "plotly~=6.0",
    "ipykernel~=6.29",
    "pymoo~=0.6",
    "memory_profiler~=0.61.0",
    "python-lsp-server~=1.10",
    "ruff~=0.9",
    "pylsp-mypy~=0.7.0"
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = [
    "fastsim*",
] # package names should match these glob patterns (["*"] by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.maturin]
profile = "release"
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "fastsim.fastsim"
manifest-path = "fastsim-py/Cargo.toml"
include = [
    { format = "sdist", path = "fastsim-core/Cargo.toml" },
    { format = "sdist", path = "fastsim-core/src/*" },
    { format = "sdist", path = "fastsim-py/Cargo.toml" },
    { format = "sdist", path = "fastsim-py/src/*" },
    { format = "sdist", path = "fastsim-core/proc-macros/Cargo.toml" },
    { format = "sdist", path = "fastsim-core/proc-macros/src/*" },
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
fastsim = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
